updating final details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>i am a student of coding boot camp </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>i am from little canada a city inisde minnesota </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>i love reading light novels and playing videogames </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>i dream to be a game designer or a professional in any coding job </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>199 big circle drive little canada minnesota </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>its fun to use code to make something prtty come to life with my own work</p>
     </section>
 
     <footer id="footer">
